--- a/lesson4/discover.html
+++ b/lesson4/discover.html
@@ -48,7 +48,35 @@
         <div id="banner"></div>
     </header>
     <main>
-
+        <div id="discover-body">
+            <section class="disc-section">
+                <picture>
+                    <img class="disc-imgs" src="images/loading.png" data-src="images/rsz-cordero.png" alt="Cordero Town">
+                </picture>
+                <div>
+                    <h3>Cordero Town</h3>
+                    <p>ksafhlkasjfbsk;ldjbgjksabdg;ksajbdgvlkjzbnxcv;bxzcv;lnbzx;ckvbn;lkSZfg;kSDJBHflkSDJBfljkSDBf;jkSDBf;lkjflbsadvlnbXZC:vkjbhZSvjk;bsadjh</p>
+                </div>
+            </section>
+            <section class="disc-section">
+                <picture>
+                    <img class="disc-imgs" src="images/loading.png" data-src="images/rsz-monte-carmelo.png" alt="Monte Carmelo">
+                </picture>
+                <div>
+                    <h3>Monte Carmelo</h3>
+                    <p>LKJASfljksdbfljksavbdfljaghsbdlvgasldfhvsldfblsjdvb;lxzjkdbhv;isadgfvbi;usd gfvljxchbv,mxzcbvSZD Vfukysdgfuysdgflysaudgflsdfjh</p>
+                </div>
+            </section>
+            <section class="disc-section">
+                <picture>
+                    <img src="images/loading.png" data-src="images/rsz-encantada.png" alt="La Encantada">
+                </picture>
+                <div>
+                    <h3>La Encantada</h3>
+                    <p>slhfgljsadvbfljhsvbdgwqegyirfiabscfuiosaghldfvhigasldfkjb;ASKFGlSAfg;</p>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <section class="footer1">
