--- a/lesson4/discover.html
+++ b/lesson4/discover.html
@@ -54,8 +54,8 @@
                     <img class="disc-imgs" src="images/loading.png" data-src="images/rsz-cordero.png" alt="Cordero Town">
                 </picture>
                 <div>
-                    <h3>Cordero Town</h3>
-                    <p>ksafhlkasjfbsk;ldjbgjksabdg;ksajbdgvlkjzbnxcv;bxzcv;lnbzx;ckvbn;lkSZfg;kSDJBHflkSDJBfljkSDBf;jkSDBf;lkjflbsadvlnbXZC:vkjbhZSvjk;bsadjh</p>
+                    <h3>Cordero</h3>
+                    <p>Cordero in a town in a mountainous area of the Táchira state, Venezuela, is a dream land of cool climate and landscapes with crops of pompoms, carnations and vegetables that make it a proper environment to taste the well-known and traditional Andean sweets and pastries, while visiting the tourist places you will realize why its people are known for their cordiality.</p>
                 </div>
             </section>
             <section class="disc-section">
@@ -64,7 +64,7 @@
                 </picture>
                 <div>
                     <h3>Monte Carmelo</h3>
-                    <p>LKJASfljksdbfljksavbdfljaghsbdlvgasldfhvsldfblsjdvb;lxzjkdbhv;isadgfvbi;usd gfvljxchbv,mxzcbvSZD Vfukysdgfuysdgflysaudgflsdfjh</p>
+                    <p>The Monte Carmelo Tourist Parador offers possibly the most complete view of the city of San Cristóbal and its vast metropolitan area, being a nighttime spectacle on clear days. In this same place there is the centenary sanctuary church of the Virgen del Carmen de Monte Carmelo, a building of traditional architecture that is the guardian of a valuable image of colonial invoice.</p>
                 </div>
             </section>
             <section class="disc-section">
@@ -73,7 +73,25 @@
                 </picture>
                 <div>
                     <h3>La Encantada</h3>
-                    <p>slhfgljsadvbfljhsvbdgwqegyirfiabscfuiosaghldfvhigasldfkjb;ASKFGlSAfg;</p>
+                    <p>This wonderful Andean tourist town, built with the materials of the old houses, stone foundations, mud, clay, old tiles, round wood and wild cane, in a completely country environment, surrounded by exuberant natural beauty, mountain climate, in a family atmosphere and the special attention of your hosts in each space</p>
+                </div>
+            </section>
+            <section class="disc-section">
+                <picture>
+                    <img src="images/loading.png" data-src="images/rsz-pinos.png" alt="Los Pinos">
+                </picture>
+                <div>
+                    <h3>Los Pinos</h3>
+                    <p>Cordero is surrounded by pine trees that at certain times of the year drop their leaves and form an orange carpet where people can go for a picnic, share with the family, take photos or connect with nature.</p>
+                </div>
+            </section>
+            <section class="disc-section">
+                <picture>
+                    <img src="images/loading.png" data-src="images/plaza-bolivar.jpg" alt="Plaza Bolivar">
+                </picture>
+                <div>
+                    <h3>Plaza Bolivar</h3>
+                    <p>The rather popular festivities or events are the "Vuelta en trompo", held every Easter, the "Kite Contest" that takes place at the end of August and the "Old Years Contest", which takes place the last December days in the Campo Deportivo community. The main celebrations of a religious nature are those that have to do with Holy Week and December festivities, such as the "Misas de aguinaldos" and the crowded "Desfile de reyes magos".</p>
                 </div>
             </section>
         </div>
