--- a/lesson4/discover.html
+++ b/lesson4/discover.html
@@ -69,7 +69,7 @@
             </section>
             <section class="disc-section">
                 <picture>
-                    <img src="images/loading.png" data-src="images/rsz-encantada.png" alt="La Encantada">
+                    <img class="disc-imgs" src="images/loading.png" data-src="images/rsz-encantada.png" alt="La Encantada">
                 </picture>
                 <div>
                     <h3>La Encantada</h3>
@@ -78,7 +78,7 @@
             </section>
             <section class="disc-section">
                 <picture>
-                    <img src="images/loading.png" data-src="images/rsz-pinos.png" alt="Los Pinos">
+                    <img class="disc-imgs" src="images/loading.png" data-src="images/rsz-pinos.png" alt="Los Pinos">
                 </picture>
                 <div>
                     <h3>Los Pinos</h3>
@@ -87,7 +87,7 @@
             </section>
             <section class="disc-section">
                 <picture>
-                    <img src="images/loading.png" data-src="images/plaza-bolivar.jpg" alt="Plaza Bolivar">
+                    <img class="disc-imgs" src="images/loading.png" data-src="images/plaza-bolivar.jpg" alt="Plaza Bolivar">
                 </picture>
                 <div>
                     <h3>Plaza Bolivar</h3>
