--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -15,7 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Instrument+Serif&display=swap" rel="stylesheet">
 </head>
+
 <body>
+
     <header>
         <section class="first">
             <picture>
@@ -43,12 +45,14 @@
             </nav>
         </section>
         <section class="second">
-            <h1 id="currentime">#</h1>
+            <h1 id="currentime">#</h1>          
         </section>
+        <div id="last-visit"><p>You last visited this page <span id="visits"></span> days ago</p></div>
         <div id="banner"></div>
     </header>
-    <main>
-        
+
+
+    <main>        
         <div id="hero">
             <picture>
                 <source srcset="images/wdd230-org-1200.jpg" media="(min-width: 1200px)">
@@ -119,8 +123,9 @@
                 <a class="footer-a" href="+584247820465">+58 (424)782 0465</a>
             </section>
         </div>
-
     </main>
+
+
     <footer>
         <section class="footer1">
             <picture>
@@ -146,6 +151,8 @@
             <p class="lastModif" id="lastModified"></p>
         </div>
     </footer>
+
+
 <script src="scripts/chamber.js"></script>
 <script src="scripts/windchill.js"></script>
 </body>
