--- a/lesson4/discover.html
+++ b/lesson4/discover.html
@@ -45,6 +45,7 @@
         <section class="second">
             <h1 id="currentime">#</h1>
         </section>
+        <div id="last-visit"><p>You last visited this page <span id="visits"></span> days ago</p></div>
         <div id="banner"></div>
     </header>
     <main>
