--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -38,8 +38,8 @@
                 <ul id="primaryNav">
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/chamber.html">Home</a></li>
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/discover.html">Discover</a></li>
-                    <li><a href="#">Directory</a></li>
-                    <li><a href="#">Join</a></li>
+                    <li><a href="https://yuriro21.github.io/wdd230/lesson4/join.html">Join</a></li>
+                    <li><a href="#">Directory</a></li>                    
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
