--- a/lesson4/thanks.html
+++ b/lesson4/thanks.html
@@ -50,71 +50,11 @@
         <div id="last-visit"><p>You last visited this page <span id="visits"></span> days ago</p></div>
         <div id="banner"></div>
     </header>
+
  
     <main>        
-        <h1 id="jointitle">Join to the Cordero Chamber of Commerce</h1>
-        <form method="get" action="thanks.html">
-            <fieldset>
-                <legend>Applicant Information</legend>
-                <Label class="top">First Name*: <input type="text" name="fname" required></imput></Label>
-                <Label class="top">Last Name*: <input type="text" name="lname" required></imput></Label>
-                <Label class="top">Position Title: <input type="text" name="lname" pattern="[A-Za-z\s\-]{7,}" title="Text accept only alpha characters, hyphens, and spaces with a minimum of seven characters"></imput></Label>
-                <Label class="top">Email*: <input type="email" name="email" placeholder="someone@gmail.com" required></imput></Label>
-                <Label class="top">Phone*: <input type="tel" name="phone" placeholder="123456789" required></imput></Label>            
-            </fieldset>
-            <fieldset>
-                <legend>Business Information</legend>
-                <Label class="top">Business Name or Title*: <input type="text" name="ftitle" required></imput></Label>
-                <div>Membership Level</div>
-                <label class="sbs"><input type="radio" name="business" value="np"> NP Membership (Non-Profit)</label>
-                <label class="sbs"><input type="radio" name="business" value="bronze"> Bronze Membership</label>
-                <label class="sbs"><input type="radio" name="business" value="silver"> Silver Membership</label>
-                <label class="sbs"><input type="radio" name="business" value="gold"> Gold Membership</label>
-                <label class="description">Business Description<textarea name="description" id="description" cols="30" rows="10"></textarea></label>
-            </fieldset>
-
-            <input type="hidden" id="timestamp" name="timestamp" value="">
-            <input type="submit" value="Join The Chamber" class="submitBtn">
-        </form>
-
-        <table>
-            <caption>Cordero Chamber Membership</caption>
-            <tr id="headt">
-                <th id="cell">Hi</th>
-                <th>Non <br>Profit</th>
-                <th>Bronze</th>
-                <th>Silver</th>
-                <th>Gold</th>
-            </tr>
-            <tr>
-                <td>Registration</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-            </tr>
-            <tr>
-                <td>Curses</td>
-                <td class="not">&#10005;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-            </tr>
-            <tr>
-                <td>Publicity</td>
-                <td class="not">&#10005;</td>
-                <td class="not">&#10005;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-            </tr>
-            <tr>
-                <td>Special <br>Publicity</td>
-                <td class="not">&#10005;</td>
-                <td class="not">&#10005;</td>
-                <td class="not">&#10005;</td>
-                <td class="yes">&#10003;</td>
-            </tr>
-        </table>
+        <h1>Thanks!</h1>
+    
     </main>
 
 
