--- a/lesson4/join.html
+++ b/lesson4/join.html
@@ -23,7 +23,7 @@
             <picture>
                 <img class="logo" src="images/logo-cordero.webp" alt="Logo Cordero Chamber Commerce">
             </picture>        
-            <h1 id="cordero-title">Cordero Chamber Of Commerce</h1>
+            <h2 id="cordero-title">Cordero Chamber Of Commerce</h2>
             
             <div id="social">
                 <a href="https://www.facebook.com/" target="_blank">
@@ -45,26 +45,26 @@
             </nav>
         </section>
         <section class="second">
-            <h1 id="currentime">#</h1>          
+            <h2 id="currentime">#</h2>          
         </section>
         <div id="last-visit"><p>You last visited this page <span id="visits"></span> days ago</p></div>
         <div id="banner"></div>
     </header>
- 
+
     <main>        
         <h1 id="jointitle">Join to the Cordero Chamber of Commerce</h1>
         <form method="get" action="thanks.html">
             <fieldset>
                 <legend>Applicant Information</legend>
-                <Label class="top">First Name*: <input type="text" name="fname" required></imput></Label>
-                <Label class="top">Last Name*: <input type="text" name="lname" required></imput></Label>
-                <Label class="top">Position Title: <input type="text" name="lname" pattern="[A-Za-z\s\-]{7,}" title="Text accept only alpha characters, hyphens, and spaces with a minimum of seven characters"></imput></Label>
-                <Label class="top">Email*: <input type="email" name="email" placeholder="someone@gmail.com" required></imput></Label>
-                <Label class="top">Phone*: <input type="tel" name="phone" placeholder="123456789" required></imput></Label>            
+                <Label class="top">First Name*: <input type="text" name="fname" required></Label>
+                <Label class="top">Last Name*: <input type="text" name="lname" required></Label>
+                <Label class="top">Position Title: <input type="text" name="lname" pattern="[A-Za-z\s\-]{7,}" title="Text accept only alpha characters, hyphens, and spaces with a minimum of seven characters"></Label>
+                <Label class="top">Email*: <input type="email" name="email" placeholder="someone@gmail.com" required></Label>
+                <Label class="top">Phone*: <input type="tel" name="phone" placeholder="123456789" required></Label>            
             </fieldset>
             <fieldset>
                 <legend>Business Information</legend>
-                <Label class="top">Business Name or Title*: <input type="text" name="ftitle" required></imput></Label>
+                <Label class="top">Business Name or Title*: <input type="text" name="ftitle" required></Label>
                 <div>Membership Level</div>
                 <label class="sbs"><input type="radio" name="business" value="np"> NP Membership (Non-Profit)</label>
                 <label class="sbs"><input type="radio" name="business" value="bronze"> Bronze Membership</label>
@@ -124,9 +124,9 @@
                 <img class="logof" src="images/logo-cordero.webp" alt="Logo Cordero chamber of Commerce">
             </picture>
             <div>
-                <h1>Cordero Chamber of Commerce</h1>
-                <h2>Carrera Eludeterio Ch. Calle 11</h2>
-                <h3>Cordero, Tachira, Venezuela 5012</h3>
+                <h2>Cordero Chamber of Commerce</h2>
+                <h3>Carrera Eludeterio Ch. Calle 11</h3>
+                <h4>Cordero, Tachira, Venezuela 5012</h4>
             </div>   
         
             <div class="line"></div>
