--- a/lesson10/weather-api.html
+++ b/lesson10/weather-api.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="styles/weather-api.css">
 </head>
 <body>
-    <h1>OpenWeatherMap.org API Test</h1>
-    <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
-    <h2>Current Condition Icon</h2>
-    <figure>
-      <img src="" alt="" id="weather-icon" />
-      <figcaption></figcaption>
-    </figure>
+    <section>
+        <h1>OpenWeatherMap.org API Test</h1>
+        <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
+        <h2>Current Condition Icon</h2>
+        <figure>
+        <img src="" alt="" id="weather-icon" />
+        <figcaption></figcaption>
+        </figure>
+    </section>
 <script src="scripts/weather-api.js"></script>
 </body>
 </html>
