--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>Lesson 07: <a href="https://yuriro21.github.io/wdd230/lesson7/lazyload.html">Lazyload</a></li>
             <li>Lesson 08: <a href="https://yuriro21.github.io/wdd230/lesson8/tablebuild.html">Table Build</a></li>
             <li>Lesson 09: <a href="https://yuriro21.github.io/wdd230/lesson9/prophets.html">Prophets</a></li>
-            <li>Lesson 10: <a href="lesson10/">Title</a></li>
+            <li>Lesson 10: <a href="https://yuriro21.github.io/wdd230/lesson10/weather-api.html">Weather API</a></li>
             <li>Lesson 11: <a href="lesson11/">Title</a></li>
         </ul>
     </main>
