--- a/lesson4/thanks.html
+++ b/lesson4/thanks.html
@@ -52,9 +52,13 @@
     </header>
 
  
-    <main>        
-        <h1>Thanks!</h1>
-    
+    <main> 
+        <section id="thanks">      
+            <h2>Welcome to Cordero Chamber of Commerce!</h2>
+            <h3>Here we have the opportunity to grow together</h3>
+        </section> 
+
+        
     </main>
 
 
