--- a/lesson4/thanks.html
+++ b/lesson4/thanks.html
@@ -39,7 +39,7 @@
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/chamber.html">Home</a></li>
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/discover.html">Discover</a></li>
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/join.html">Join</a></li>
-                    <li><a href="#">Directory</a></li>                    
+                    <li><a href="https://yuriro21.github.io/wdd230/lesson4/directory.html">Directory</a></li>                    
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
