--- a/lesson4/directory.html
+++ b/lesson4/directory.html
@@ -54,10 +54,9 @@
 
     <main>        
         <div id="space">
-            <div id="menu">
+            <div class="menu">
                 <button id="grid">&#9783;</button>
-                <button id="list">&#9776;</button>
-                <hr>
+                <button id="list">&#9776;</button>                
             </div>
             <article id="directory"></article>
         </div>
