--- a/lesson4/directory.html
+++ b/lesson4/directory.html
@@ -58,7 +58,7 @@
                 <button id="grid">&#9783;</button>
                 <button id="list">&#9776;</button>                
             </div>
-            <article id="directory"></article>
+            <article class="grid"></article>
         </div>
     </main>
 
