--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -108,7 +108,7 @@
             </section>
             <section class="spotlight2" id="sport2">
                 <h1>Farmacia Leydicar</h1>
-                <img class="img-spot" src="images/farma.webp" alt="farmacy Leydicar">
+                <img class="img-spot" src="images/farma.jpg" alt="farmacy Leydicar">
                 <p>"Your well-being is our priority"</p>
                 <div class="line2"></div>                
                 <a class="footer-a" href="farmaleydicar@gmail.com">farmaleydicar@gmail.com</a>
