--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -9,31 +9,35 @@
 </head>
 <body>
     <table>
-        <caption>ACME Wildwest Services</caption>
-        <tr id="headt">
-            <th id="cell">Hi</th>
-            <th>Basic</th>
-            <th>Premium</th>
-            <th>Deluxe</th>
-        </tr>
-        <tr>
-            <td>Feature 1</td>
-            <td class="yes">&#10003;</td>
-            <td class="yes">&#10003;</td>
-            <td class="yes">&#10003;</td>
-        </tr>
-        <tr>
-            <td>Feature 2</td>
-            <td class="not">&#10005;</td>
-            <td class="yes">&#10003;</td>
-            <td class="yes">&#10003;</td>
-        </tr>
-        <tr>
-            <td>Feature 3</td>
-            <td class="not">&#10005;</td>
-            <td class="not">&#10005;</td>
-            <td class="yes">&#10003;</td>
-        </tr>
+        <thead>
+            <caption>ACME Wildwest Services</caption>
+        </thead>
+        <tbody>            
+            <tr id="headt">
+                <th id="cell">Hi</th>
+                <th>Basic</th>
+                <th>Premium</th>
+                <th>Deluxe</th>
+            </tr>
+            <tr>
+                <td>Feature 1</td>
+                <td class="yes">&#10003;</td>
+                <td class="yes">&#10003;</td>
+                <td class="yes">&#10003;</td>
+            </tr>
+            <tr>
+                <td>Feature 2</td>
+                <td class="not">&#10005;</td>
+                <td class="yes">&#10003;</td>
+                <td class="yes">&#10003;</td>
+            </tr>
+            <tr>
+                <td>Feature 3</td>
+                <td class="not">&#10005;</td>
+                <td class="not">&#10005;</td>
+                <td class="yes">&#10003;</td>
+            </tr>
+        </tbody>
     </table>
     <footer>
         <p>Table 1: Account Feature Comparison</p>
