--- a/lesson4/join.html
+++ b/lesson4/join.html
@@ -78,42 +78,46 @@
         </form>
 
         <table>
-            <caption>Cordero Chamber Membership</caption>
-            <tr id="headt">
-                <th id="cell">Hi</th>
-                <th>Non <br>Profit</th>
-                <th>Bronze</th>
-                <th>Silver</th>
-                <th>Gold</th>
-            </tr>
-            <tr>
-                <td>Registration</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-            </tr>
-            <tr>
-                <td>Curses</td>
-                <td class="not">&#10005;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-            </tr>
-            <tr>
-                <td>Publicity</td>
-                <td class="not">&#10005;</td>
-                <td class="not">&#10005;</td>
-                <td class="yes">&#10003;</td>
-                <td class="yes">&#10003;</td>
-            </tr>
-            <tr>
-                <td>Special <br>Publicity</td>
-                <td class="not">&#10005;</td>
-                <td class="not">&#10005;</td>
-                <td class="not">&#10005;</td>
-                <td class="yes">&#10003;</td>
-            </tr>
+            <thead>
+                <caption>Cordero Chamber Membership</caption>
+            </thead>
+            <tbody>
+                <tr id="headt">
+                    <th id="cell">Hi</th>
+                    <th>Non Profit<br>$0</th>
+                    <th>Bronze <br>$200</th>
+                    <th>Silver <br>$400</th>
+                    <th>Gold <br>$500</th>
+                </tr>
+                <tr>
+                    <td>Registration</td>
+                    <td class="yes">&#10003;</td>
+                    <td class="yes">&#10003;</td>
+                    <td class="yes">&#10003;</td>
+                    <td class="yes">&#10003;</td>
+                </tr>
+                <tr>
+                    <td>Curses</td>
+                    <td class="not">&#10005;</td>
+                    <td class="yes">&#10003;</td>
+                    <td class="yes">&#10003;</td>
+                    <td class="yes">&#10003;</td>
+                </tr>
+                <tr>
+                    <td>Publicity</td>
+                    <td class="not">&#10005;</td>
+                    <td class="not">&#10005;</td>
+                    <td class="yes">&#10003;</td>
+                    <td class="yes">&#10003;</td>
+                </tr>
+                <tr>
+                    <td>Special <br>Publicity</td>
+                    <td class="not">&#10005;</td>
+                    <td class="not">&#10005;</td>
+                    <td class="not">&#10005;</td>
+                    <td class="yes">&#10003;</td>
+                </tr>
+            </tbody>            
         </table>
     </main>
 
