--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -71,18 +71,24 @@
         </section>
         <section id="weather">
             <div>
-                <h1>Weather</h1>
+                <h1>Weather in Cordero</h1>
             </div>
             <div id="temperature">
-                <img id="img-weather" src="images/clima.webp" alt="Weather">
-                <span id="gradesf">7</span>
+                <figure>
+                    <img src="" alt="" id="weather-icon" />
+                    <figcaption></figcaption>
+                    </figure>
+                <span id="gradesf"></span>
                 <p id="gradesftext">&deg;F</p>
             </div>
-            <h2>Partly Cloudy</h2>
-            <div id="w-line"></div>
+            <h2 id="condition">Partly Cloudy</h2>
+            <hr id="whr">
             <div>
                 <h3>Wind Speed: <span id="mph">12</span> mph </h3>
-                <h3>Wind Chill: <span id="windchill"></span> </h3>
+                <h3>Wind Chill: N/A</h3>
+            </div>
+            <div>
+                <h5>Weather data powered by <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap</a></h5>
             </div>            
         </section>
         <section id="news">
