--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -83,7 +83,7 @@
             </div>
             <h2 id="condition">Partly Cloudy</h2>
             <hr id="whr">
-            <div>
+            <div id="winds">
                 <h3>Wind Speed: <span id="mph">12</span> mph </h3>
                 <h3>Wind Chill: N/A</h3>
             </div>
