--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -40,7 +40,7 @@
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/discover.html">Discover</a></li>
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/join.html">Join</a></li>
                     <li><a href="https://yuriro21.github.io/wdd230/lesson4/directory.html">Directory</a></li>                    
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="https://yuriro21.github.io/wdd230/lesson4/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </section>
