--- a/lesson4/contact.html
+++ b/lesson4/contact.html
@@ -53,7 +53,41 @@
 
 
     <main>        
-       
+       <div id="contspace">
+            <section>
+                <h2>------ Contact Us ------</h2>
+                <br>
+                <h3>Address</h3>
+                <p>Carrera Eludeterio Ch. Calle 11<br>Cordero, Tachira, Venezuela</p>
+                <h3>Working Hours</h3>
+                <p>Monday - Thursday <br> 9:00 a.m. to 5:00 p.m.</p>
+                <h3>Phone</h3>
+                <p>+58 276 3961361</p>
+                <h3>Email</h3>
+                <p>info@corderocc.org</p>
+            </section>
+
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d512.208576830432!2d-72.18136901440361!3d7.855776982303217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e666e5c4902f919%3A0xad5b51c7732f36e2!2sAlcaldia%20Del%20Municipio%20Andres%20Bello!5e0!3m2!1ses!2sus!4v1688188725311!5m2!1ses!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            </div>
+            <section>
+                <h2>Board of Directors</h2>
+                <p>Edisson J. Ruiz <br> President & CEO </p>
+                <p>Phone: 3852338356 <br> Email: edisson.ruiz21@gmail.com</p>
+            </section>
+            <section>
+                <form action="thanks.html">
+                    <fieldset>
+                        <legend>Contact Information</legend>
+                        <Label class="secf">First Name*: <input type="text" name="fname" required></Label>
+                        <Label class="secf">Last Name*: <input type="text" name="lname" required></Label>
+                        <Label class="secf">Phone*: <input type="tel" name="phone" placeholder="123456789" required></Label> 
+                        <Label class="secf">Email*: <input type="email" name="email" placeholder="someone@gmail.com" required></Label>
+                        <label class="description">Business Description<textarea name="description" id="description" cols="30" rows="10"></textarea></label>
+                    </fieldset>
+                </form>
+            </section>
+       </div>
     </main>
 
 
