--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -98,7 +98,7 @@
                 The acts were chaired by the GB Hernán Dionisio Rincón Paz, director of the school, together with Edward Sarmiento, deputy director of the house of studies.</p>
         </section>
         <div id="join">
-            <button class="buttonj" type="button">Join Us!</button>
+            <a href="https://yuriro21.github.io/wdd230/lesson4/join.html"><button class="buttonj" type="button">Join Us!</button></a>
             <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
         </div>
         <div class="spotlight">
