--- a/lesson4/join.html
+++ b/lesson4/join.html
@@ -53,7 +53,7 @@
 
     <main>        
         <h1 id="jointitle">Join to the Cordero Chamber of Commerce</h1>
-        <form method="get" action="thanks.html">
+        <form id="joinform" method="get" action="thanks.html">
             <fieldset>
                 <legend>Applicant Information</legend>
                 <Label class="top">First Name*: <input type="text" name="fname" required></Label>
