--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -75,7 +75,7 @@
             </div>
             <div id="temperature">
                 <figure>
-                    <img src="" alt="" id="weather-icon" />
+                    <img src="#" alt="#" id="weather-icon" />
                     <figcaption></figcaption>
                     </figure>
                 <span id="gradesf"></span>
@@ -98,7 +98,10 @@
                 The acts were chaired by the GB Hernán Dionisio Rincón Paz, director of the school, together with Edward Sarmiento, deputy director of the house of studies.</p>
         </section>
         <div id="join">
-            <a href="https://yuriro21.github.io/wdd230/lesson4/join.html"><button class="buttonj" type="button">Join Us!</button></a>
+            <!-- <a href="https://yuriro21.github.io/wdd230/lesson4/join.html"><button class="buttonj" type="button">Join Us!</button></a> -->
+            <form id="formbutton" action="https://yuriro21.github.io/wdd230/lesson4/join.html" method="get">
+                <button class="buttonj">Join Us!</button>
+            </form>
             <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
         </div>
         <div class="spotlight">
@@ -107,8 +110,8 @@
                 <img class="img-spot" src="images/ferreteria.webp" alt="ferreteria la Minita">
                 <p>"Everything for construction."</p>
                 <div class="line2"></div>                
-                <a class="footer-a" href="iferreminita@gmail.com">ferreminita@gmail.com</a>
-                <a class="footer-a" href="+584147040789">+58 (414) 704 0789</a>
+                <a class="footer-a" href="#">ferreminita@gmail.com</a>
+                <a class="footer-a" href="#">+58 (414) 704 0789</a>
             </section>
             <section class="spotlight2" id="sport2">
                 <h1>Farmacia Leydicar</h1>
