--- a/lesson4/chamber.html
+++ b/lesson4/chamber.html
@@ -55,9 +55,9 @@
     <main>        
         <div id="hero">
             <picture>
-                <source srcset="images/wdd230-org-1200.jpg" media="(min-width: 1200px)">
-                <source srcset="images/wdd230-org-800.jpg" media="(min-width: 800px)">
-                <img id="imgcordero" src="images/wdd230-org-400.jpg" alt="Cordero city">
+                <source srcset="images/cordero.jpg" media="(min-width: 1200px)">
+                <source srcset="images/cordero.jpg" media="(min-width: 800px)">
+                <img id="imgcordero" src="images/cordero.jpg" alt="Cordero city">
             </picture>
             <section id="welcome">
                 <h1>Welcome to Cordero</h1>
@@ -118,16 +118,16 @@
                 <img class="img-spot" src="images/farma.jpg" alt="farmacy Leydicar">
                 <p>"Your well-being is our priority"</p>
                 <div class="line2"></div>                
-                <a class="footer-a" href="farmaleydicar@gmail.com">farmaleydicar@gmail.com</a>
-                <a class="footer-a" href="+582763961714">+58 (276) 396 1714</a>
+                <a class="footer-a" href="#">farmaleydicar@gmail.com</a>
+                <a class="footer-a" href="#">+58 (276) 396 1714</a>
             </section>
             <section class="spotlight3">
                 <h1>El Merendero</h1>
                 <img class="img-spot" src="images/restaurant.webp" alt="restaurant el Merendero">
                 <p>"We take care of your food, we take care of you."</p>
                 <div class="line2"></div>                
-                <a class="footer-a" href="elmerendero@gmail.com">elmerendero@gmail.com</a>
-                <a class="footer-a" href="+584247820465">+58 (424)782 0465</a>
+                <a class="footer-a" href="#">elmerendero@gmail.com</a>
+                <a class="footer-a" href="#">+58 (424)782 0465</a>
             </section>
         </div>
     </main>
@@ -146,8 +146,8 @@
         
             <div class="line"></div>
             <div id="ftext">
-                <a class="footer-a" href="info@corderocc.org">info@corderocc.org</a>
-                <a class="footer-a" href="+582763961361">+58 (276) 396 1361</a>
+                <a class="footer-a" href="#">info@corderocc.org</a>
+                <a class="footer-a" href="#">+58 (276) 396 1361</a>
                 <a id="map" href="https://www.google.com/maps/place/Cordero,+T%C3%A1chira,+Venezuela/@7.8550915,-72.1966126,14z/data=!3m1!4b1!4m6!3m5!1s0x8e666ef563cb5763:0xf6e21807064f680c!8m2!3d7.8553585!4d-72.1801156!16s%2Fg%2F123196t2" target="_blank">📍 Location Map</a> 
             </div>
         </section>
