--- a/lesson4/thanks.html
+++ b/lesson4/thanks.html
@@ -75,8 +75,8 @@
         
             <div class="line"></div>
             <div id="ftext">
-                <a class="footer-a" href="info@corderocc.org">info@corderocc.org</a>
-                <a class="footer-a" href="+582763961361">+58 (276) 396 1361</a>
+                <a class="footer-a" href="#">info@corderocc.org</a>
+                <a class="footer-a" href="#">+58 (276) 396 1361</a>
                 <a id="map" href="https://www.google.com/maps/place/Cordero,+T%C3%A1chira,+Venezuela/@7.8550915,-72.1966126,14z/data=!3m1!4b1!4m6!3m5!1s0x8e666ef563cb5763:0xf6e21807064f680c!8m2!3d7.8553585!4d-72.1801156!16s%2Fg%2F123196t2" target="_blank">📍 Location Map</a> 
             </div>
         </section>
