--- a/lesson4/join.html
+++ b/lesson4/join.html
@@ -81,7 +81,7 @@
             <caption>Cordero Chamber Membership</caption>
             <tbody>
                 <tr id="headt">
-                    <th id="cell"><img src="images/logo-cordero.webp" alt="Logo" width="75px" height="75px"></th>
+                    <th id="cell"><img src="images/logo-cordero.webp" alt="Logo" width="75" height="75"></th>
                     <th>Non Profit<br>$0</th>
                     <th>Bronze <br>$200</th>
                     <th>Silver <br>$400</th>
