--- a/lesson10/weather-api.html
+++ b/lesson10/weather-api.html
@@ -13,7 +13,7 @@
         <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
         <h2>Current Condition Icon</h2>
         <figure>
-        <img src="" alt="" id="weather-icon" />
+        <img src="#" alt="#" id="weather-icon" />
         <figcaption></figcaption>
         </figure>
     </section>
