header ccs and images added

--- a/bountiful-foods/bountiful-foods.html
+++ b/bountiful-foods/bountiful-foods.html
@@ -16,28 +16,35 @@
 <body>
     <header>
         <div id="all-header">
-            <nav id="menu">
-                <button id="hamburger"><span>&#9776;</span><span> X </span></button>
-                <ul id="nav-pages">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Fresh</a></li>
-                    <li><a href="#">About Us</a></li>
-                </ul>
-            </nav>
             <picture>
-                <img src="images/#" alt="Logo Bountiful Foods">
+                <img id="logo" src="images/bountiful-foods.png" alt="Logo Bountiful Foods">
             </picture>
-            <div id="social-media">
-                <a href="https://www.facebook.com/" target="_blank">
-                    <img src="images/#" alt="Facebook Icon">
-                </a>
-                <a href="https://www.instagram.com/" target="_blank">
-                    <img src="images/#" alt="instagram Icon">
-                </a>
-                <a href="https://www.tiktok.com/" target="_blank">
-                    <img src="images/#" alt="Tik Tok Icon">
-                </a>
-                <hr>
+            <div id="second">
+                <nav class="menu">
+                    <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
+                    <ul id="primaryNav">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Fresh</a></li>
+                        <li><a href="#">About Us</a></li>
+                    </ul>
+                </nav>
+                <div id="social-media">
+                    <div>
+                        <a href="https://www.facebook.com/" target="_blank">
+                            <img src="images/facebook.png" alt="Facebook Icon">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.instagram.com/" target="_blank">
+                            <img src="images/instagram.png" alt="instagram Icon">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://www.tiktok.com/" target="_blank">
+                            <img src="images/tiktok.png" alt="Tik Tok Icon">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
