footer created and some javascript

--- a/bountiful-foods/bountiful-foods.html
+++ b/bountiful-foods/bountiful-foods.html
@@ -52,7 +52,21 @@
 
     </main>
     <footer>
-
+        <div>
+            <a href="https://yuriro21.github.io/wdd230/bountiful-foods/bountiful-foods.html">
+                <img id="logo-footer" src="images/bountiful-foods.png" alt="Logo Bountiful Foods">
+            </a>
+        </div>
+        <div>
+            <p>&copy; <span id="year"></span> Bountiful Foods</p>
+        </div>
+        <div>
+            <p>Edisson J. Ruiz</p>
+            <p>wdd230 - BYU Idaho</p>
+        </div>
+        <div>            
+            <p class="lastModif" id="lastModified"></p>
+        </div>        
     </footer>
 <script src="scripts/bountiful-foods.js"></script>
 </body>
