Image added and credits

--- a/bountiful-foods/bountiful-foods.html
+++ b/bountiful-foods/bountiful-foods.html
@@ -24,8 +24,8 @@
                     <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                     <ul id="primaryNav">
                         <li><a href="https://yuriro21.github.io/wdd230/bountiful-foods/bountiful-foods.html">Home</a></li>
-                        <li><a href="#">Fresh</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="https://yuriro21.github.io/wdd230/bountiful-foods/fresh.html">Fresh</a></li>
+                        <li><a href="https://yuriro21.github.io/wdd230/bountiful-foods/about-us.html">About Us</a></li>
                     </ul>
                 </nav>
                 <div id="social-media">
@@ -49,7 +49,11 @@
         </div>
     </header>
     <main>
-
+        <div>
+            <picture>
+                <img src="images/pfeiffer-beach.png" alt="Pfeiffer Beach">
+            </picture>
+        </div>
     </main>
     <footer>
         <div>
@@ -63,6 +67,10 @@
         <div>
             <p>Edisson J. Ruiz</p>
             <p>wdd230 - BYU Idaho</p>
+        </div>
+        <div>
+            <p>Credits:</p>
+            <a href="/bountiful-foods/credits.html">Thank You!</a>
         </div>
         <div>            
             <p class="lastModif" id="lastModified"></p>
