--- a/bountiful-foods/credits.html
+++ b/bountiful-foods/credits.html
@@ -49,7 +49,14 @@
         </div>
     </header>
     <main>
-
+        <div>
+            <h2>Icons:</h2>
+            <a href="https://icons8.com/" target="_blank">https://icons8.com/</a>
+            <h2>Pfeiffer Beach Image:</h2>
+            <a href="https://www.telegraph.co.uk/travel/discover-america/california/best-beaches/">Telegraph</a>
+            <br>
+            <a href="https://www.gettyimages.com/">getty</a>
+        </div>
     </main>
     <footer>
         <div>
