--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -24,8 +24,8 @@
                     <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                     <ul id="primaryNav">
                         <li><a href="https://yuriro21.github.io/wdd230/bountiful-foods/bountiful-foods.html">Home</a></li>
-                        <li><a href="#">Fresh</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="https://yuriro21.github.io/wdd230/bountiful-foods/fresh.html">Fresh</a></li>
+                        <li><a href="https://yuriro21.github.io/wdd230/bountiful-foods/about-us.html">About Us</a></li>
                     </ul>
                 </nav>
                 <div id="social-media">
